--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
     "next": "15.5.0",
     "next-export-optimize-images": "^4.6.2",
     "react": "19.1.0",
