--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-export-optimize-images": "^4.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-phone-input-2": "^2.15.1",
     "serve": "^14.2.5"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-input-mask": "^3.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "gh-pages": "^6.3.0",
